# airi-llm-router

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README_ja.md  README_zh.md  airi-launcher.js  docker-compose.yml  pyproject.toml  pytest.ini
src/: classifier.py  config.py  logger.py  main.py
src/adapters/: __init__.py  base.py  modelscope.py  ollama.py  registry.py
src/media/: __init__.py  offload.py
src/middleware/: __init__.py  circuit_breaker.py
src/monitor/: __init__.py  vram.py
src/queue/: worker.py
src/router/: dispatch.py  schemas.py
tests/: conftest.py  test_dispatch.py
tests/benchmarks/: README.md  test_stream.py  test_stress.py  visualize.py
